--- a/Conway.Components/GameOfLife.razor
+++ b/Conway.Components/GameOfLife.razor
@@ -1,6 +1,6 @@
 ﻿@* temparary, blazor will not be rendering dom *@
 <table>
-    @for (int i = 0; i < _gameOfLife.CurrentGeneration.GetLength(0); i++)
+    @* @for (int i = 0; i < _gameOfLife.CurrentGeneration.GetLength(0); i++)
     {   
         <tr>     
         @for (int j = 0; j < _gameOfLife.CurrentGeneration.GetLength(1); j++)
@@ -8,7 +8,8 @@
             <td class="cell@_gameOfLife.CurrentGeneration[ i , j ]"></td>
         } 
         </tr>
-    }
+    } *@
+    @((MarkupString)_gameOfLife.CurrentGenerationHtml)
 </table>
 
 @code
